--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+# For details, see:  https://www.gitpod.io/docs/references/gitpod-yml
 
 tasks:
   - init: npm install
@@ -12,3 +13,9 @@ ports:
 vscode:
   extensions:
     - svelte.svelte-vscode
+
+github:
+  prebuilds:
+    master: true
+    branches: true
+    pullRequests: true
